syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";



enum GameLogType {
    LogUnknow           =  0;
    CreateUser          =  1; // 创建角色
    EnterGame           =  2; // 进入游戏
    LeaveGame           =  3; // 退出游戏
    KillMonsters        =  4; // 击杀怪物
    CaptureAnimals      =  5; // 抓捕动物
    FreeAnimals         =  6; // 释放动物
    TaskAccept          =  7; // 接取任务
    TaskAbandon         =  8; // 放弃任务   
    TaskEnd             =  9; // 完成任务
    TaskListAccept      = 10; // 接取任务链
    TaskListAbandon     = 11; // 放弃任务链
    TaskListEnd         = 12; // 完成任务链
    ChangeMapStart      = 13; // 开始切换地图(切换服务器)
    ChangeMapEnd        = 14; // 完成切换地图(切换服务器)
    ChangeMapCancel     = 15; // 玩家放弃切换地图(切换服务器)
    UpgradeTalent       = 16; // 升级天赋树节点 
    UseNft              = 17; // 使用nft
    HomeSowing          = 18; // 播种
    HomePutAnimalFood   = 19; // 放置动物食物
    HomeHarvest         = 20; // 家园土地收获
    CollectStart        = 21; // 开始采集(包含采草和挖矿)
    CollectEnd          = 22; // 采集完成(包含采草和挖矿)
    

    GmMake              = 99; // gm后台添加
}

